--- a/config/helix.conf
+++ b/config/helix.conf
@@ -1,6 +1,13 @@
 # Copyright (c) 2020 The ZMK Contributors
 # SPDX-License-Identifier: MIT
+#define ZMK_POINTING_DEFAULT_MOVE_VAL 1250
+#define ZMK_POINTING_DEFAULT_SCRL_VAL 100
+
+
+#include <dt-bindings/zmk/pointing.h>
+
 
 # Enables RGB functionality (Uncomment lines below to enable.)
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_POINTING=Y
