--- a/config/helix.conf
+++ b/config/helix.conf
@@ -10,4 +10,4 @@
 # Enables RGB functionality (Uncomment lines below to enable.)
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_POINTING=Y
+CONFIG_ZMK_POINTING=y
